--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -8,6 +8,7 @@
           rel="stylesheet"/>
 </head>
 <body>
+<div class="row">
 <div>
     <i class="fas fa-search"></i>
     <input class= wd-search-bar id="search-bar" placeholder="Search Twitter"/>
