--- a/public/tuiter/explore/index1.html
+++ b/public/tuiter/explore/index1.html
@@ -274,7 +274,7 @@
                     </div>
                     <div class="col-6">
                         <div class ="wd-inline">
-                            <div class ="wd-bold">
+                            <div class ="wd-bold-wtf">
                                 Virgin Galactic
                             </div>
                             <i class="fas fa-check-circle fa-xs wd-left-3"></i>
