--- a/public/challenge/explore/index.html
+++ b/public/challenge/explore/index.html
@@ -77,7 +77,7 @@
         <button type="submit" class="btn btn-tweet ">Tweet</button>
 
     </div>
-    <div class="col-10 col-md-10 col-lg-6 col-xl-7 wd-borders-left-right">
+    <div class="col-10 col-md-10 col-lg-6 col-xl-7">
         <div class="row">
             <div class ="col-11">
                 <i class="fas fa-search"></i>
@@ -88,7 +88,7 @@
             </div>
 
         </div>
-        <div class="wd-margin-left">
+        <div class="wd-margin-left wd-borders-left-right">
             <div class="wd-ref-links">
                 <a class="wd-inactive wd-active"href="#">For you</a>
             </div>
@@ -102,7 +102,7 @@
             <div class="wd-ref-links">
                 <a class="wd-inactive" href="#">Sports</a>
             </div>
-            <div class="wd-ref-links">
+            <div class="wd-ref-links d-none d-md-block">
                 <a class="wd-inactive" href="#">Entertainment</a>
             </div>
         </div>
