--- a/public/tuiter/explore/index1.html
+++ b/public/tuiter/explore/index1.html
@@ -99,7 +99,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="news.html">News</a>
             </li>
-            <li class="nav-item d-none d-sm-block">
+            <li class="nav-item d-none">
                 <a class="nav-link" href="sports.html">Sports</a>
             </li>
             <li class="nav-item d-none d-md-block">
