--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
     <li><a href="labs/a3/index.html">Assignment 3</a></li>
     <li><a href="labs/a4/index.html">Assignment 4</a></li>
+    <li><a href="labs/a5/index.html">Assignment 5</a></li>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
     <li><a href="challenge/explore/index.html">A4 Challenge</a></li>
   </ul>
