--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
     <li><a href="labs/a4/index.html">Assignment 4</a></li>
     <li><a href="labs/a5/index.html">Assignment 5</a></li>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
-    <li><a href="challenge/explore/index.html">A4 Challenge</a></li>
+    <li><a href="labs/a5/todos/index.html">A5 Todo List</a></li>
+  
   </ul>
   </body>
 </html>
